# lightBolt

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
cli/: generator.py  lightbolt.py  pybolt.py
cli/templates/django/{{cookiecutter.project_slug}}/: settings.py  urls.py  wsgi.py
cli/templates/fastapi/: cookiecutter.json
client/: package.json  pnpm-lock.yaml
client/app/: globals.css  layout.tsx  page.tsx
client/app/components/: terminal.tsx
lightbolt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
pybolt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
test_django/: .gitignore  manage.py  settings.py  wsgi.py
