[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybolt"
version = "0.1.0"
description = "PyBolt - Scaffold Python backend projects instantly (FastAPI, Flask, Django)."
authors = [
    { name = "Anjany", email = "anjany.jaiswal2005@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "cookiecutter>=2.5.0",
    "rich>=13.0.0"
]

[project.scripts]
pybolt = "cli.pybolt:app"
