[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightbolt"
version = "0.1.1"
description = "LightBolt - Generate Python based backend boilerplate instantly (FastAPI, Flask, Django)."
authors = [
    { name = "Anjany", email = "anjany.jaiswal2005@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "cookiecutter>=2.5.0",
    "rich>=13.0.0"
]

[project.scripts]
lightbolt = "cli.lightbolt:app"

[tool.setuptools]
packages = ["cli"]

[tool.setuptools.package-data]
"cli" = ["templates/**/*"]
